[package]
name = "keyboard_hid_host"
version = "0.1.0"
authors = ["Julia <leoherbsthofer@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.5"
#rouille = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"